# pyaps

./: CONTRIBUTING.md  GOVERNANCE.md  README.md  pyproject.toml  pytest.ini
.github/: COMMIT_CONVENTION.md
.github/workflows/: test.yml
src/pyaps/: __init__.py
src/pyaps/auth/: __init__.py  client.py  example.py  token_store.py
src/pyaps/automation/: WORKFLOW.md  __init__.py  client.py  example.py  types.py  workflow.py  workflow_example.py
src/pyaps/datamanagement/: __init__.py  client.py  example.py
src/pyaps/http/: __init__.py  client.py  proxy_example.py
tests/: __init__.py  test_import.py
