[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-aps"
version = "0.0.1"
description = "Autodesk Platform Service APIs Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "voidbox"}
]
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/voidbox-ai/pyaps"
Repository = "https://github.com/voidbox-ai/pyaps"
Issues = "https://github.com/voidbox-ai/pyaps/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyaps = ["py.typed"]